--- a/chatbot-app/frontend/src/index.css
+++ b/chatbot-app/frontend/src/index.css
@@ -5,18 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
+  background-color: var(--cbre-bg, #f5f5f5);
 }
 
-.App {
-  text-align: center;
-  padding: 20px;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.App h1 {
-  color: #fff;
-  margin-bottom: 30px;
-  font-size: 2.5em;
-}
